@@ -2,6 +2,7 @@
  * APIs 2.0 can define different endpoints for access token and for refresh token (the same urls by default)
  * mark Facebook doesn't support refresh token by throwing UnsupportedOperationException
  * make JSON Access Token Extractor be the default for OAuth 2.0 (according to RFC 6749)
+ * drop Google OAuth 1.0 support (OAuth 1.0 was officially deprecated by Google)
 
 [2.3.0]
  * Stack Exchange authentication via OAuth 2.0 (stackoverflow.com, askubuntu.com, etc.).
